--- a/alpine-slim/Dockerfile
+++ b/alpine-slim/Dockerfile
@@ -1,2 +1,3 @@
 FROM nginx:1.29.2-trixie
 COPY SRC/html /usr/share/nginx/html
+#RUN mv /usr/share/nginx/html/index.html /usr/share/nginx/html/new_login_page.html
