--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,25 +1,26 @@
-name: CI/CD Pipeline
+name: Docker Build & Run
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-run:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image
+        run: docker build -t my-nginx-demo .
 
-    - name: Build and push
-      run: |
-        IMAGE=lumpyto/lumpyto-ci-cd-test
-        docker build -t $IMAGE:latest .
-        docker push $IMAGE:latest
+      - name: Run Docker container
+        run: docker run --rm -d -p 8080:80 my-nginx-demo
+
+      - name: Wait and test
+        run: |
+          sleep 5
+          curl http://localhost:8080
